--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/keen-dataviz@3/dist/keen-dataviz.min.js" type="text/javascript"></script>
 
   <!-- Dashboard -->
-  <link href="../../assets/css/keen-dashboards.css" rel="stylesheet" type="text/css" />
+  <link href="./assets/css/keen-dashboards.css" rel="stylesheet" type="text/css" />
   <link href="starter-kit.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="starter-kit.js"></script>
 </head>
