show iframe power design

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
   <div class="container grid grid-simple-col-3">
     <div id="chart-01" class="hero starter-chart"></div>
     <div id="chart-02" class="starter-chart"></div>
-    <div id="chart-03" class="starter-chart"></div>
+    <div class="starter-chart" style="width: 370px;">
+      <iframe title="PiezometroCuerdaVibrante" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMzQ3N2M1Y2ItNmYyMi00ZGVlLWE0NDMtNGNkODJmMGRiMGM5IiwidCI6ImM0YTY2YzM0LTJiYjctNDUxZi04YmUxLWIyYzI2YTQzMDE1OCIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
+    </div>
     <div id="chart-04" class="starter-chart"></div>
     <div id="chart-05" class="starter-chart"></div>
   </div>
